[package]
name = "boenthoe"
version = "0.2.0"
authors = ["Ilkka Hänninen"]
edition = "2018"

[dependencies]
image = "0.23.9"
winit = "0.20"
wgpu = "0.6.0"
futures = "0.3.4"
shaderc = "0.6"
bytemuck = "1.4.1"
failure = "0.1.6"
cgmath = "0.17"
clap = "3.0.0-beta.1"
tobj = "2.0.2"
minimp3 = "0.4"
cpal = "0.12.1"
rand = "0.7.3"
notify = "4.0.15"
boenthoescript = { path = "boenthoescript" }

[profile.dev.package."*"]
opt-level = 2
