[package]
name = "boenthoe"
version = "0.2.0"
authors = ["Ilkka Hänninen"]
edition = "2018"

[dependencies]
boenthoescript = { path = "boenthoescript" }
bytemuck = "1.4.1"
cgmath = "0.17"
clap = "3.0.0-beta.1"
cpal = "0.12.1"
futures = "0.3.4"
image = "0.23.9"
minimp3 = "0.4"
notify = "4.0.15"
pathdiff = "0.1.0"
rand = "0.7.3"
shaderc = "0.6"
tobj = "2.0.2"
typed-builder = "0.7.0"
wgpu = "0.6.0"
winit = "0.20"

[profile.dev.package."*"]
opt-level = 2
